Fix footer alignment on large screens

--- a/source/stylesheets/components/_faq.scss
+++ b/source/stylesheets/components/_faq.scss
@@ -11,7 +11,7 @@
 }
 
 .faq p {
-  max-width: 100%;
+  max-width: 65rem;
 }
 
 .faq__back-to-top {
