--- a/source/stylesheets/layout/_footer.scss
+++ b/source/stylesheets/layout/_footer.scss
@@ -1,25 +1,20 @@
 .site-footer {
   display: block;
-  padding-bottom: 2rem;
-}
-
-.home-page .site-footer {
-  position: absolute;
-  bottom: 1rem;
   z-index: 2;
-
-  @media screen and (min-width: breakpoint('desktop')) {
-    position: relative;
-  }
+  padding-bottom: 2rem;
+  margin-top: auto;
 }
 
 .site-footer .container {
   @media screen and (min-width: breakpoint('desktop')) {
     display: flex;
     align-items: center;
-    max-width: 60rem;
     margin: 0 auto;
   }
+}
+
+.home-page .site-footer .container {
+  max-width: 60rem;
 }
 
 .social {
